--- a/core/.ssh/config
+++ b/core/.ssh/config
@@ -1,15 +1,15 @@
 Host bifrost.blossom.dsek.se gjallarbron.blossom.dsek.se
-    User me5081wi-s
+    User lo2663an-s
     IdentityFile ~/.ssh/id_ed25519
 
 Host bifrost.blossom gjallarbron.blossom
     HostName %h.dsek.se
-    User me5081wi-s
+    User lo2663an-s
     IdentityFile ~/.ssh/id_ed25519
 
 Host *.blossom !bifrost.blossom !gjallarbron.blossom
     HostName %h.dsek.se
     ProxyJump gjallarbron.blossom.dsek.se
-    User me5081wi-s
+    User lo2663an-s
     IdentityFile ~/.ssh/id_ed25519
 
