added shotcut for lockscreen

--- a/desktop/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/desktop/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -23,6 +23,7 @@ bindd = $mainMod, A, desktop overview, exec, $scriptsDir/OverviewToggle.sh # tog
 #bindd = $mainMod, A, Quickshell overview, global, quickshell:overviewToggle # desktop overview (if installed)
 bindd = $mainMod, Return, Open terminal, exec, $term
 bindd = $mainMod, E, file manager, exec, $files
+bindd = $mainMod, L, lockScreen, exec, $scriptsDir/LockScreen.sh
 
 
 
