--- a/desktop/.config/hypr/configs/Startup_Apps.conf
+++ b/desktop/.config/hypr/configs/Startup_Apps.conf
@@ -22,7 +22,7 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = $scriptsDir/KeybindsLayoutInit.sh
 
 # Initialize Drop Down terminal - See Bug#810 https://github.com/JaKooLit/Hyprland-Dots/issues/810#issuecomment-3351947644
-exec-once = $HOME/.config/hypr/scripts/Dropterminal.sh kitty &
+#exec-once = $HOME/.config/hypr/scripts/Dropterminal.sh kitty &
 
 
 # Polkit (Polkit Gnome / KDE)
@@ -43,7 +43,7 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
 # Rainbow borders
-exec-once = $UserScripts/RainbowBorders.sh
+#exec-once = $UserScripts/RainbowBorders.sh
 
 # Starting hypridle to start hyprlock
 exec-once = hypridle
